--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
 *~
 *.sw[mnpcod]
 .tmp
@@ -22,6 +28,10 @@ log.txt
 /www
 /platforms
 /plugins
+
+# Capacitor native platforms
+android/
+ios/
 
 # Compiled output
 /dist
@@ -68,3 +78,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+
+
